@@ -5,3 +5,4 @@ from category import *
 from party import *
 from address import *
 from contact_mechanism import *
+from configuration import *
